k8s/apps/pappwiki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pappwiki
  namespace: pappwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pappwiki
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pappwiki
    spec:
      containers:
        - name: wikijs
          image: requarks/wiki:2
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
