k8s/apps/pappwiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pappwiki-svc
  namespace: pappwiki
spec:
  selector:
    app: pappwiki
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
